tests/toylang/pos/000091_cdrc2.toylang
program a = { if a then sleep else if a then sleep; } .
