tests/toylang/neg/001030_mutation.toylang
program a = { if a then sleep else sleep .; } .
